--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,4 +1,4 @@
 <h2>Merchants</h2>
 <% @merchants.each do |merchant| %>
-  <%= link_to merchant.name, merchant_path(merchant) %>
+  <%= link_to merchant.name, merchant_path(merchant.id) %><br>
 <% end %>
